fix: 수정 가능한 리스트로 덱 생성하도록 수정